--- a/src/components/latestNews/LatestNews.css
+++ b/src/components/latestNews/LatestNews.css
@@ -3,44 +3,103 @@
   flex-direction: column;
   flex: 1;
   background-color: white;
+  width: inherit;
 }
 
 .latestNewsDoubleContainer {
   display: flex;
+  justify-content: center;
+  margin-bottom: 35px;
 }
 
 .latestNewsSingleContainer {
-  max-width: 50%;
-  padding: 0 100px 0 0;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  text-align: center;
+  margin-bottom: 15px;
+}
+
+.lastestNewsSingleContainerTitle {
+  padding: 0 50px 0 50px;
+}
+
+.newsTitle {
+  text-decoration: none;
+  color: black;
 }
 
 .latestNewsContentContainer {
-  height: 400px;
+  display: flex;
+  flex-direction: row;
+  height: 150px;
   line-height: 25px;
-  margin: 0 0 20px 0;
+  margin: 0 0 15px 0;
   overflow: hidden;
+  padding: 0 100px 0 100px;
+  text-align: justify;
 }
 
 .latestNewsDiscussionContainer {
-  width: 100%;
-  background-color: black;
-  height: 50px;
+  display: flex;
+  flex-direction: row;
+  margin: 0 100px 0 100px;
+}
+
+.latestNewsDiscussionContainerLinkContainer {
+  flex: 1;
+  display: flex;
+  justify-content: flex-end;
+  text-decoration: none
+}
+
+.latestNewsDiscussionContainerLink {
+  text-decoration: none;
 }
 
 .newsImage {
-  float: left;
-  width: 30%;
+  width: 20%;
   height: auto;
   margin: 0 20px 5px 0;
+}
+
+@media only screen and (max-width: 1280px) {
+  .newsImage {
+    width: 30%;
+    height: auto;
+    margin: 0 20px 5px 0;
+  }
+}
+
+@media only screen and (max-width: 830px) {
+  .newsImage {
+    width: 40%;
+    height: auto;
+    margin: 0 20px 5px 0;
+  }
 }
 
 .fadeout {
     position: sticky;
     bottom: 0em;
     width:100%;
-    height: 4em;
+    height: 2em;
     background: -webkit-linear-gradient(
         rgba(255, 255, 255, 0) 0%,
         rgba(255, 255, 255, 1) 100%
     );
+}
+
+.blur {
+   color: transparent;
+   text-shadow: 0 0 6px rgba(0, 0, 0, 0.95);
+}
+
+.selectForbiden {
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none;
 }
