--- a/src/components/mainContent/MainContent.css
+++ b/src/components/mainContent/MainContent.css
@@ -1,10 +1,17 @@
 .mainContainerParties {
     display: flex;
     padding: 0 50px 10px 50px;
-    height: 75%;
 }
 
 .mainContainer {
   padding: 0 50px 10px 50px;
   height: 100%;
+}
+
+.spacingAdjustment {
+  display: flex;
+  flex-direction: row;
+  height: 30px;
+  margin-bottom: 20px;
+  align-items: center;
 }
