--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 html, body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  font-family: -apple-system, 'Merriweather', serif,
+    BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -15,6 +16,6 @@ html, body {
   width: 100%;
 }
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  font-family: 'Space Mono', monospace, source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
