Added the necessary changes to create a menu bar. The old header will no longer be used.

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
-.adjustContent {
-  padding-top: 150px;
+.appMainContainer {
+  overflow: hidden;
+}
+.appMainContent {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    position: relative;
+}
+
+.adjustContentDrawer {
+  padding-top: 90px;
 }
