--- a/src/components/latestNewsSingleContainer/LatestNewsSingleContainer.css
+++ b/src/components/latestNewsSingleContainer/LatestNewsSingleContainer.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   text-align: center;
   margin-bottom: 15px;
+  padding-bottom: 15px;
 }
 
 .lastestNewsSingleContainerTitle {
@@ -18,30 +19,36 @@
 .newsTitle {
   text-decoration: none;
   color: black;
+  text-transform: uppercase;
+  font-size: 12px;
 }
 
 .latestNewsContentContainer {
   display: flex;
   flex-direction: row;
-  height: 150px;
+  height: 120px;
   line-height: 25px;
   margin: 0 0 15px 0;
   overflow: hidden;
   padding: 0 100px 0 100px;
   text-align: justify;
+  font-size: 12px;
 }
 
 .latestNewsDiscussionContainer {
   display: flex;
   flex-direction: row;
   margin: 0 100px 0 100px;
+  font-size: 12px;
+  justify-content: center;
 }
 
 .latestNewsDiscussionContainerLinkContainer {
   flex: 1;
   display: flex;
   justify-content: flex-end;
-  text-decoration: none
+  text-decoration: none;
+
 }
 
 .latestNewsDiscussionContainerLink {
@@ -55,7 +62,7 @@
 }
 
 .newsImage {
-  width: 20%;
+  width: 15%;
   height: auto;
   margin: 0 20px 5px 0;
 }
@@ -68,17 +75,31 @@
 
 @media only screen and (max-width: 1280px) {
   .newsImage {
-    width: 30%;
-    height: auto;
-    margin: 0 20px 5px 0;
+    width: 25%;
   }
 }
 
 @media only screen and (max-width: 830px) {
   .newsImage {
-    width: 40%;
-    height: auto;
-    margin: 0 20px 5px 0;
+    width: 50%;
+  }
+  .newsTitle {
+    font-size: 8Px;
+  }
+
+  .latestNewsContentContainer {
+    line-height: 15px;
+    font-size: 10px;
+    padding: 0 50px 0 50px;
+  }
+
+  .latestNewsDiscussionContainer {
+    margin: 0px 15px 0 15px;
+    font-size: 8px;
+  }
+
+  .lastestNewsSingleContainerTitle {
+    padding: 0 10px 0 10px;
   }
 }
 
