--- a/src/components/mainContent/MainContent.css
+++ b/src/components/mainContent/MainContent.css
@@ -3,10 +3,51 @@
   flex-direction: column;
 }
 
+.mainContainerDark {
+  overflow: hidden;
+  filter: blur(2px); 
+  -webkit-filter: blur(2px);
+  -moz-filter: blur(2px);
+  -o-filter: blur(2px); 
+  -ms-filter: blur(2px);
+}
+
 .spacingAdjustment {
   display: flex;
   flex-direction: row;
   height: 30px;
   margin-bottom: 20px;
+  margin-top: 10px;
   align-items: center;
+  padding: 0 200px 0 200px;
+  justify-content: center;
+}
+
+.removeLinks {
+  pointer-events: none;
+}
+
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;  /* Preferred icon size */
+  display: inline-block;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+
+  /* Support for all WebKit browsers. */
+  -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
+
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
+
+  /* Support for IE. */
+  font-feature-settings: 'liga';
 }
