--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -6,10 +6,10 @@
   background-color: white;
   -webkit-touch-callout: none; /* iOS Safari */
   -webkit-user-select: none; /* Safari */
-   -khtml-user-select: none; /* Konqueror HTML */
-     -moz-user-select: none; /* Firefox */
-      -ms-user-select: none; /* Internet Explorer/Edge */
-          user-select: none; 
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; 
 }
 
 /* sticky has a width of 85% because the width of the drawer is 15%. Keep in mind if you change this one you should change the other.
@@ -45,40 +45,6 @@
   color: black;
 }
 
-.nav {
-  display: flex;
-  justify-content: center;
-  padding-bottom: 10px;
-}
-
-.navElems {
-  margin: 0 10px 0 10px;
-  font-size: 16px;
-  color: #988282;
-  cursor: pointer;
-}
-
-.selectedElem {
-  margin: 0 10px 0 10px;
-  font-size: 16px;
-  color: black;
-}
-
-.headerMenuBarIcon {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  cursor: pointer;
-  flex: 2;
-}
-
-.iconsContainer {
-  display: flex;
-  justify-content: flex-end;
-  padding-right: 20px;
-}
-
-.icons {
-  cursor: pointer;
-  margin-left: 10px;
+.headerIcons {
+  font-size: 36px;
 }
