--- a/src/components/menuBoard/MenuBoard.css
+++ b/src/components/menuBoard/MenuBoard.css
@@ -2,7 +2,6 @@
   height: 85%;
   width: 18%;
   position: fixed;
-  top: 95px;
   background-color: white;
   padding-left: 20px;
   z-index: 2;
@@ -11,48 +10,15 @@
   overflow-x: hidden;
 }
 
-.mainButtons {
-  font-size: 16px !important;
-}
-
 .partieButtons {
   font-size: 14px !important;
 } 
 
-@media only screen and (max-width: 1280px) {
-  .menuBoardContainer {
-    height: 85%;
-    width: 30%;
-    position: fixed;
-    top: 95px;
-    background-color: white;
-    z-index: 2;
-    padding-bottom: 40px;
-    overflow-y: auto;
-    overflow-x: hidden;
-  }
-}
-
-@media only screen and (max-width: 830px) {
-  .menuBoardContainer {
-    height: 85%;
-    width: 70%;
-    position: fixed;
-    top: 95px;
-    background-color: white;
-    z-index: 2;
-    padding-bottom: 40px;
-    overflow-y: auto;
-    overflow-x: hidden;
-  }
-}
-
 .menuBoardnavElems {
   margin: 0 90px 20px 15px;
-  font-size: 12px;
+  font-size: 16px;
   color: #988282;
   cursor: pointer;
-  width: 100%;
   -webkit-touch-callout: none; /* iOS Safari */
   -webkit-user-select: none; /* Safari */
   -khtml-user-select: none; /* Konqueror HTML */
@@ -70,15 +36,42 @@
   padding-left: 20px;
 }
 
-.menuBoardmenuBar {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  padding-left: 20px;
-  cursor: pointer;
-}
-
 .menuBoardSticky {
   position: fixed;
   top: 90px;
 }
+
+.iconsContainer {
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 20px;
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; 
+}
+
+.iconsMenuBoard {
+  cursor: pointer;
+  color: grey;
+}
+
+.iconsMenuBoardSelected {
+  cursor: pointer;
+  color: black; 
+}
+
+@media only screen and (max-width: 1280px) {
+  .menuBoardContainer {
+    width: 30%;
+  }
+}
+
+@media only screen and (max-width: 830px) {
+  .menuBoardContainer {
+    width: 70%;
+  }
+}
+
