--- a/src/components/latestNewsSingleContainer/LatestNewsSingleContainer.css
+++ b/src/components/latestNewsSingleContainer/LatestNewsSingleContainer.css
@@ -7,6 +7,10 @@
   padding-bottom: 15px;
 }
 
+.latestNewstSingleContainerDarkMode {
+  color: white;
+}
+
 .lastestNewsSingleContainerTitle {
   padding: 0 150px 0 150px;
 }
@@ -90,6 +94,11 @@
         rgba(255, 255, 255, 0) 0%,
         rgba(255, 255, 255, 1) 100%
     );
+}
+
+.fadeoutDarkMode {
+  background-image: -webkit-linear-gradient(top, rgba(23, 24, 28, 0) 0%, #17181c 100%);
+  background-color: initial;
 }
 
 .selectForbiden {
