--- a/src/components/menuBoard/MenuBoard.css
+++ b/src/components/menuBoard/MenuBoard.css
@@ -2,58 +2,31 @@
   height: 90%;
   width: 18%;
   position: fixed;
-  background-color: white;
   padding-left: 20px;
   z-index: 2;
   padding-bottom: 40px;
   overflow-y: auto;
   overflow-x: hidden;
+  font-size: 14px;
 }
-
-.menuBoardDark {
-  background-color: #17181c;
-}
-
-.partieButtons {
-  font-size: 14px !important;
-} 
 
 .menuBoardnavElems {
   margin: 0 90px 20px 15px;
   font-size: 16px;
-  color: #988282;
   cursor: pointer;
+}
+
+.noSelect {
   -webkit-touch-callout: none; /* iOS Safari */
   -webkit-user-select: none; /* Safari */
   -khtml-user-select: none; /* Konqueror HTML */
   -moz-user-select: none; /* Firefox */
   -ms-user-select: none; /* Internet Explorer/Edge */
-  user-select: none; /* Non-prefixed version, currently
-  supported by Chrome and Opera */
-}
-
-.menuBoardnavElemsDark {
-  color: #b6b1aa
-}
-
-.menuBoardselectedElem {
-  color: black;
-}
-
-.menuBoardselectedElemDark {
-  color: white;
+  user-select: none; /* Non-prefixed version, currently supported by Chrome and Opera */
 }
 
 .menuBoardPartieElem {
   padding-left: 20px;
-}
-
-.menuBoardPartieElemDark {
-  color: #b6b1aa
-}
-
-.menuBoardPartieElemSelectedDark {
-  color: white;
 }
 
 .menuBoardSticky {
@@ -66,27 +39,7 @@
   justify-content: flex-start;
   padding-left: 10px;
   margin-bottom: 20px;
-  -webkit-touch-callout: none; /* iOS Safari */
-  -webkit-user-select: none; /* Safari */
-  -khtml-user-select: none; /* Konqueror HTML */
-  -moz-user-select: none; /* Firefox */
-  -ms-user-select: none; /* Internet Explorer/Edge */
-  user-select: none; 
-}
-
-.iconsMenuBoard {
   cursor: pointer;
-  color: grey;
-}
-
-.iconsMenuBoardSelected {
-  cursor: pointer;
-  color: black; 
-}
-
-.iconsMenuBoardSelectedDarkMode {
-  cursor: pointer;
-  color: white; 
 }
 
 @media only screen and (max-width: 1280px) {
