--- a/src/components/latestNewsSingleContainer/LatestNewsSingleContainer.css
+++ b/src/components/latestNewsSingleContainer/LatestNewsSingleContainer.css
@@ -3,12 +3,7 @@
   flex: 1;
   flex-direction: column;
   text-align: center;
-  margin-bottom: 15px;
-  padding-bottom: 15px;
-}
-
-.lastestNewsSingleContainerTitle {
-  padding: 0 150px 0 150px;
+  padding: 0 400px 0 400px;
 }
 
 .tags {
@@ -30,7 +25,6 @@
   text-decoration: none;
   text-transform: uppercase;
   font-size: 12px;
-  padding: 0 50px 0 50px;
 }
 
 .latestNewsContentContainer {
@@ -40,14 +34,12 @@
   line-height: 25px;
   margin: 0 0 15px 0;
   overflow: hidden;
-  padding: 0 200px 0 200px;
   text-align: justify;
   font-size: 14px;
 }
 
 .latestNewsDiscussionContainer {
   display: flex;
-  margin: 0 200px 0 200px;
   font-size: 12px;
 }
 
@@ -106,31 +98,103 @@
 }
 
 @media only screen and (max-width: 1280px) {
+  .latestNewsSingleContainer {
+    padding: 0 200px 0 200px;
+  }
+  
+  .lastestNewsSingleContainerTitle {
+    padding: 0;
+  }
+  
+  .tags {
+    padding-left: 5px;
+  }
+  
+  .commentIcons {
+    font-size: 16px;
+  }
+  
+  .commentContainer {
+    padding-left: 10px; 
+  }
+  
+  .newsTitle {
+    font-size: 12px;
+  }
+  
+  .latestNewsContentContainer {
+    height: 120px;
+    line-height: 25px;
+    margin: 0 0 15px 0;
+    font-size: 14px;
+  }
+  
+  .latestNewsDiscussionContainer {
+    font-size: 12px;
+  }
+
+  .latestNewsDiscussionSource {
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+  
   .newsImage {
     width: 25%;
+    margin: 0 20px 5px 0;
+  }
+  
+  .newsImageSmaller {
+    width: 15%;
+    margin: 0 20px 5px 0;
   }
 }
 
 @media only screen and (max-width: 830px) {
-  .newsImage {
-    width: 50%;
-  }
-  .newsTitle {
-    font-size: 8Px;
-  }
-
-  .latestNewsContentContainer {
-    line-height: 15px;
-    font-size: 10px;
-    padding: 0 50px 0 50px;
-  }
-
-  .latestNewsDiscussionContainer {
-    margin: 0px 15px 0 15px;
-    font-size: 8px;
+  .latestNewsSingleContainer {
+    padding: 0 10px 0 10px;
   }
 
   .lastestNewsSingleContainerTitle {
     padding: 0 10px 0 10px;
+  }
+
+  .tags {
+    padding-left: 5px;
+  }
+  
+  .commentIcons {
+    font-size: 16px;
+  }
+  
+  .commentContainer {
+    padding-left: 10px; 
+  }
+  
+  .newsTitle {
+    font-size: 6px;
+  }
+
+  .latestNewsContentContainer {
+    height: 120px;
+    line-height: 15px;
+    font-size: 10px;
+  }
+
+  .latestNewsDiscussionContainer {
+    font-size: 8px;
+  }
+
+  .latestNewsDiscussionSource {
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+
+  .newsImage {
+    width: 50%;
+  }
+
+  .newsImageSmaller {
+    width: 15%;
+    margin: 0 20px 5px 0;
   }
 }
