--- a/src/components/mainContent/MainContent.css
+++ b/src/components/mainContent/MainContent.css
@@ -8,10 +8,17 @@
 }
 
 .spacingAdjustment {
-  height: 30px;
-  margin-bottom: 20px;
+  height: 90px;
 }
 
 .removeLinks {
   pointer-events: none;
+}
+
+@media only screen and (max-width: 830px) {
+  .spacingAdjustment {
+    height: 50px;
+  }
+  
+
 }
