--- a/src/components/partyHeader/PartyHeader.css
+++ b/src/components/partyHeader/PartyHeader.css
@@ -12,8 +12,14 @@
 .partieHeaderContent {
   display: flex;
   flex-direction: row;
-  height: 30px;
+  height: 70px;
   margin-bottom: 20px;
   align-items: center;
   justify-content: center;
+}
+
+@media only screen and (max-width: 830px) {
+  .partieHeaderContent {
+    height: 90px;
+  }
 }
