Clean up of the entire code. Also added a new request

--- a/src/components/latestNews/LatestNews.css
+++ b/src/components/latestNews/LatestNews.css
@@ -6,7 +6,6 @@
 }
 
 .latestNewsDoubleContainer {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 35px;
+  text-align: center;
+  margin-bottom: 30px;
 }
