--- a/src/components/latestNewsSingleContainer/LatestNewsSingleContainer.css
+++ b/src/components/latestNewsSingleContainer/LatestNewsSingleContainer.css
@@ -1,8 +1,4 @@
 .latestNewsSingleContainer {
-  display: flex;
-  flex: 1;
-  flex-direction: column;
-  text-align: center;
   padding: 0 400px 0 400px;
 }
 
@@ -151,10 +147,52 @@
 
 @media only screen and (max-width: 830px) {
   .latestNewsSingleContainer {
-    padding: 0 10px 0 10px;
+    padding: 0 150px 0 150px;
   }
 
-  .lastestNewsSingleContainerTitle {
+  .tags {
+    padding-left: 5px;
+  }
+  
+  .commentIcons {
+    font-size: 16px;
+  }
+  
+  .commentContainer {
+    padding-left: 10px; 
+  }
+  
+  .newsTitle {
+    font-size: 6px;
+  }
+
+  .latestNewsContentContainer {
+    height: 120px;
+    line-height: 15px;
+    font-size: 10px;
+  }
+
+  .latestNewsDiscussionContainer {
+    font-size: 8px;
+  }
+
+  .latestNewsDiscussionSource {
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+
+  .newsImage {
+    width: 50%;
+  }
+
+  .newsImageSmaller {
+    width: 15%;
+    margin: 0 20px 5px 0;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .latestNewsSingleContainer {
     padding: 0 10px 0 10px;
   }
 
