--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,8 @@ html, body {
 #root {
   height: 100%;
   width: 100%;
+  margin: 0;
+  padding: 0;
 }
 code {
   font-family: 'Space Mono', monospace, source-code-pro, Menlo, Monaco, Consolas, "Courier New",
