--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,15 @@
   padding-top: 60px;
 }
 
+.selectForbiden {
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none;
+}
+
 @media only screen and (max-width: 830px) {
   .adjustContentDrawer {
     padding-top: 50px;
