--- a/src/components/articleDiscussion/ArticleDiscussion.css
+++ b/src/components/articleDiscussion/ArticleDiscussion.css
@@ -2,10 +2,25 @@
   display: flex;
   flex-direction: column;
   flex: 1;
-  width: inherit;
 }
 
 .articleContainer {
   text-align: center;
   margin-bottom: 30px;
+}
+
+.commentsContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 0 100px 0 100px;
+}
+
+@media only screen and (max-width: 830px) {
+  .editorWrapperContainer {
+    width: 100%;
+    padding-left: 10px;
+    padding-right: 10px;
+    font-size: 12px;
+  }
 }
