--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -5,7 +5,7 @@
   justify-content: space-between;
   margin-bottom: 5px;
   height: 60px;
-  box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.05)
+  box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.05);
 }
 
 .noSelect {
@@ -47,7 +47,6 @@
   justify-content: center;
   flex-direction: column;
   text-align: center;
-
 }
 
 .siteTitleLink {
