--- a/src/components/latestNewsSingleContainer/LatestNewsSingleContainer.css
+++ b/src/components/latestNewsSingleContainer/LatestNewsSingleContainer.css
@@ -8,7 +8,7 @@
 }
 
 .commentIcons {
-  font-size: 16px;
+  font-size: 14px;
   cursor: pointer;
 }
 
@@ -32,7 +32,6 @@
   flex-direction: row;
   height: 120px;
   line-height: 25px;
-  margin: 0 0 15px 0;
   overflow: hidden;
   text-align: justify;
   font-size: 14px;
@@ -44,10 +43,11 @@
 }
 
 .latestNewsDiscussionContainerLinkContainer {
-  flex: 1;
   display: flex;
+  flex: 1;
   justify-content: flex-end;
   text-decoration: none;
+  align-items: center;
 }
 
 .latestNewsDiscussionContainerLink {
@@ -88,15 +88,6 @@
   background-color: initial;
 }
 
-.selectForbiden {
-  -webkit-touch-callout: none; /* iOS Safari */
-  -webkit-user-select: none; /* Safari */
-  -khtml-user-select: none; /* Konqueror HTML */
-  -moz-user-select: none; /* Firefox */
-  -ms-user-select: none; /* Internet Explorer/Edge */
-  user-select: none;
-}
-
 @media only screen and (max-width: 1280px) {
   .latestNewsSingleContainer {
     padding: 0 200px 0 200px;
@@ -111,7 +102,7 @@
   }
   
   .commentIcons {
-    font-size: 16px;
+    font-size: 14px;
   }
   
   .commentContainer {
@@ -125,16 +116,20 @@
   .latestNewsContentContainer {
     height: 120px;
     line-height: 25px;
-    margin: 0 0 15px 0;
     font-size: 14px;
   }
   
   .latestNewsDiscussionContainer {
     font-size: 12px;
+    align-items: center;
   }
 
   .latestNewsDiscussionSource {
     padding-left: 5px;
+    padding-right: 5px;
+  }
+
+  .singleNewsTime {
     padding-right: 5px;
   }
   
@@ -159,7 +154,7 @@
   }
   
   .commentIcons {
-    font-size: 16px;
+    font-size: 14px;
   }
   
   .commentContainer {
@@ -205,7 +200,7 @@
   }
   
   .commentIcons {
-    font-size: 16px;
+    font-size: 14px;
   }
   
   .commentContainer {
