--- a/src/components/latestNewsSingleContainer/LatestNewsSingleContainer.css
+++ b/src/components/latestNewsSingleContainer/LatestNewsSingleContainer.css
@@ -27,6 +27,10 @@
   font-size: 12px;
 }
 
+.newsComment {
+  text-decoration: none;
+}
+
 .latestNewsContentContainer {
   display: flex;
   flex-direction: row;
@@ -60,16 +64,18 @@
   padding-right: 5px;
 }
 
-.newsImage {
-  width: 15%;
-  height: auto;
+.newsImageContainer {
+  min-width: 250px;
+  max-width: 250px;
   margin: 0 20px 5px 0;
 }
 
+.newsImage {
+  width: inherit;
+}
+
 .newsImageSmaller {
-  width: 15%;
-  height: auto;
-  margin: 0 20px 5px 0;
+  width: inherit;
 }
 
 .fadeout {
@@ -132,14 +138,10 @@
   .singleNewsTime {
     padding-right: 5px;
   }
-  
-  .newsImage {
-    width: 25%;
-    margin: 0 20px 5px 0;
-  }
-  
-  .newsImageSmaller {
-    width: 15%;
+
+  .newsImageContainer {
+    min-width: 250px;
+    max-width: 250px;
     margin: 0 20px 5px 0;
   }
 }
@@ -180,12 +182,9 @@
     padding-right: 5px;
   }
 
-  .newsImage {
-    width: 50%;
-  }
-
-  .newsImageSmaller {
-    width: 15%;
+  .newsImageContainer {
+    min-width: 250px;
+    max-width: 250px;
     margin: 0 20px 5px 0;
   }
 }
@@ -226,12 +225,9 @@
     padding-right: 5px;
   }
 
-  .newsImage {
-    width: 50%;
-  }
-
-  .newsImageSmaller {
-    width: 15%;
+  .newsImageContainer {
+    min-width: 150px;
+    max-width: 150px;
     margin: 0 20px 5px 0;
   }
 }
