--- a/src/components/comment/Comment.css
+++ b/src/components/comment/Comment.css
@@ -14,6 +14,7 @@
 
 .commentTime {
   padding-left: 5px;
+  min-width: 120px;
 }
 
 .commentContent {
@@ -38,9 +39,11 @@
   padding-left: 5px;
 }
 
+.childrenMainContainer {
+}
+
 .childrenContainer {
-  display: flex;
-  flex-direction: row;
+  display: inline-block;
   padding-left: 5px;
   text-decoration: none;
 }
