--- a/src/components/comment/Comment.css
+++ b/src/components/comment/Comment.css
@@ -48,7 +48,7 @@
 
 .childrenContainer {
   display: inline-block;
-  padding-left: 5px;
+  margin:  0 5px 0 5px;
   text-decoration: none;
 }
 
@@ -77,8 +77,10 @@
   border: 1px solid rgb(189, 188, 188);
   border-radius: 3px;
   margin-bottom: 5px;  
-  width: 350px;
-  height: 100px;
+  width: auto;
+  height: auto;
   z-index: 10;
   background-color: white;
+  color: black;
+  padding-right: 20px;
 }
