--- a/src/components/comment/Comment.css
+++ b/src/components/comment/Comment.css
@@ -1,5 +1,5 @@
 .commentParentContainer {
-  border: 1px solid rgb(189, 188, 188);
+  border-bottom: 1px solid rgb(189, 188, 188);
   border-radius: 3px;
   margin-bottom: 5px;
 }
@@ -7,9 +7,10 @@
 .commentHeader {
   display: flex;
   flex-direction: row;
-  padding: 5px 0 0 20px;
+  padding: 5px 0 0 0;
   margin-bottom: 15px;
   font-size: 12px;
+  flex-wrap: wrap
 }
 
 .sign {
@@ -22,7 +23,7 @@
 }
 
 .commentContent {
-  padding: 0 20px 0 20px;
+  /* padding: 0 20px 0 20px; */
   margin-bottom: 10px;
 }
 
@@ -40,15 +41,16 @@
   cursor: pointer;
 }
 .commentUsernameContainer {
-  padding-left: 5px;
+  padding: 0 5px 0 5px;
 }
 
-.childrenMainContainer {
+.commentParentUsernameContainer {
+  padding: 0 5px 0 5px;
 }
 
 .childrenContainer {
   display: inline-block;
-  margin:  0 5px 0 5px;
+  margin:  2px 5px 0 5px;
   text-decoration: none;
 }
 
@@ -82,5 +84,10 @@
   z-index: 10;
   background-color: white;
   color: black;
-  padding-right: 20px;
+  padding: 0 20px;
+}
+
+.replyCommentPadding {
+  margin: 0 0 5px 30px;
+  padding: 0 0 0 10px;
 }
