--- a/src/components/comment/Comment.css
+++ b/src/components/comment/Comment.css
@@ -89,5 +89,14 @@
 
 .replyCommentPadding {
   margin: 0 0 5px 30px;
-  padding: 0 0 0 10px;
+  /* padding: 0 0 0 10px; */
+}
+
+@media only screen and (max-width: 800px) {
+ 
+}
+
+
+@media only screen and (max-width: 600px) {
+ 
 }
