--- a/src/components/customEditor/CustomEditor.css
+++ b/src/components/customEditor/CustomEditor.css
@@ -36,6 +36,7 @@
   border-radius: 5px;
   overflow: hidden;
   margin-bottom: 10px;
+  min-height: 100px;
   height: auto;
 }
 
@@ -52,4 +53,16 @@
   background-color: cadetblue;
   padding: 5px;
   margin-bottom: 10px;
+}
+
+
+@media only screen and (max-width: 800px) {
+ 
+}
+
+
+@media only screen and (max-width: 600px) {
+  .createPostContainer {
+    padding: 0 15px 0 15px;
+  }
 }
