--- a/src/components/latestNewsSingleContainer/LatestNewsSingleContainer.css
+++ b/src/components/latestNewsSingleContainer/LatestNewsSingleContainer.css
@@ -159,7 +159,7 @@
   }
 }
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 950px) {
   .latestNewsSingleContainer {
     padding: 0 150px 0 150px;
   }
@@ -183,11 +183,11 @@
   .latestNewsContentContainer {
     height: 80px;
     line-height: 15px;
-    font-size: 10px;
+    font-size: 12px;
   }
 
   .latestNewsDiscussionContainer {
-    font-size: 8px;
+    font-size: 10px;
   }
 
   .latestNewsDiscussionSource {
@@ -198,6 +198,12 @@
   .newsImageContainer {
     min-width: 250px;
     max-width: 250px;
+    margin: 0 20px 5px 0;
+  }
+
+  .newsImageContainer {
+    min-width: 150px;
+    max-width: 150px;
     margin: 0 20px 5px 0;
   }
 }
