--- a/src/components/customEditor/CustomEditor.css
+++ b/src/components/customEditor/CustomEditor.css
@@ -29,6 +29,7 @@
 .editorWrapperContainer {
   flex-direction: column;
   height: 100%;
+  width: 98%;
 }
 
 .editorContainer {
@@ -38,7 +39,11 @@
   overflow: hidden;
   margin-bottom: 10px;
   min-height: 100px;
-  height: auto;
+  width: 100%;
+  padding: 5px;
+  font-size: 14px;
+  resize: none;
+  text-decoration: none !important;
 }
 
 
