--- a/src/components/latestNewsSingleContainer/LatestNewsSingleContainer.css
+++ b/src/components/latestNewsSingleContainer/LatestNewsSingleContainer.css
@@ -3,7 +3,8 @@
 }
 
 .tags {
-  padding-left: 5px;
+  display: flex;
+  flex-direction: row;
   cursor: pointer;
 }
 
@@ -61,8 +62,6 @@
 
 .latestNewsDiscussionSource {
   text-decoration: none;
-  padding-left: 5px;
-  padding-right: 5px;
 }
 
 .newsImageContainer {
@@ -95,6 +94,25 @@
   background-color: initial;
 }
 
+.newsTimeStamp {
+  display: flex;
+  flex-direction: row;
+}
+
+.tagList {
+  display: flex;
+  flex-direction: row;
+}
+
+.newsTimeUrl {
+  display: flex;
+  flex-direction: row;
+}
+
+.separator {
+  padding: 0 5px;
+}
+
 @media only screen and (max-width: 1680px) {
   .latestNewsSingleContainer {
     padding: 0 400px 0 400px;
@@ -115,11 +133,7 @@
   .lastestNewsSingleContainerTitle {
     padding: 0;
   }
-  
-  .tags {
-    padding-left: 5px;
-  }
-  
+
   .commentIcons {
     font-size: 14px;
   }
@@ -143,15 +157,6 @@
     align-items: center;
   }
 
-  .latestNewsDiscussionSource {
-    padding-left: 5px;
-    padding-right: 5px;
-  }
-
-  .singleNewsTime {
-    padding-right: 5px;
-  }
-
   .newsImageContainer {
     min-width: 250px;
     max-width: 250px;
@@ -165,7 +170,8 @@
   }
 
   .tags {
-    padding-left: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
   }
   
   .commentIcons {
@@ -190,11 +196,6 @@
     font-size: 10px;
   }
 
-  .latestNewsDiscussionSource {
-    padding-left: 5px;
-    padding-right: 5px;
-  }
-
   .newsImageContainer {
     min-width: 250px;
     max-width: 250px;
@@ -206,6 +207,12 @@
     max-width: 150px;
     margin: 0 20px 5px 0;
   }
+
+  .newsTimeStamp {
+    display: flex;
+    flex-direction: column;
+    padding-top: 5px;
+  }
 }
 
 @media only screen and (max-width: 600px) {
@@ -214,7 +221,7 @@
   }
 
   .tags {
-    padding-left: 5px;
+    padding-left: 1px;
   }
   
   .commentIcons {
@@ -229,6 +236,10 @@
     font-size: 6px;
   }
 
+  .latestNewsNavLink {
+    padding: 5px 0;
+  }
+
   .latestNewsContentContainer {
     height: 75px;
     line-height: 15px;
@@ -237,11 +248,6 @@
 
   .latestNewsDiscussionContainer {
     font-size: 8px;
-  }
-
-  .latestNewsDiscussionSource {
-    padding-left: 5px;
-    padding-right: 5px;
   }
 
   .newsImageContainer {
