--- a/src/components/latestNewsSingleContainer/LatestNewsSingleContainer.css
+++ b/src/components/latestNewsSingleContainer/LatestNewsSingleContainer.css
@@ -78,15 +78,31 @@
   width: inherit;
 }
 
-.fadeout {
+.fadeoutMobile {
     position: sticky;
     bottom: 0em;
-    width:100%;
-    height: 2em;
+    width: 100%;
+    height: 11em;
     background: -webkit-linear-gradient(
         rgba(255, 255, 255, 0) 0%,
-        rgba(255, 255, 255, 1) 100%
+        rgba(255, 255, 255, 1) 48%
     );
+}
+
+.fadeout {
+  position: sticky;
+  bottom: 0em;
+  width:100%;
+  height: 2em;
+  background: -webkit-linear-gradient(
+      rgba(255, 255, 255, 0) 0%,
+      rgba(255, 255, 255, 1) 85%
+  );
+}
+
+.contentFade {
+  overflow: hidden;
+  max-height: 75px;
 }
 
 .fadeoutDarkMode {
@@ -147,7 +163,7 @@
   }
   
   .latestNewsContentContainer {
-    height: 120px;
+    height: 110px;
     line-height: 25px;
     font-size: 14px;
   }
@@ -213,6 +229,17 @@
     flex-direction: column;
     padding-top: 5px;
   }
+
+  .fadeoutMobile {
+    position: sticky;
+    bottom: 0em;
+    width: 100%;
+    height: 14em;
+    background: -webkit-linear-gradient(
+        rgba(255, 255, 255, 0) 0%,
+        rgba(255, 255, 255, 1) 48%
+    );
+  }
 }
 
 @media only screen and (max-width: 600px) {
@@ -254,5 +281,16 @@
     min-width: 150px;
     max-width: 150px;
     margin: 0 20px 5px 0;
+  }
+
+  .fadeoutMobile {
+    position: sticky;
+    bottom: 0em;
+    width: 100%;
+    height: 18em;
+    background: -webkit-linear-gradient(
+        rgba(255, 255, 255, 0) 0%,
+        rgba(255, 255, 255, 1) 48%
+    );
   }
 }
