--- a/src/components/latestNewsSingleContainer/LatestNewsSingleContainer.css
+++ b/src/components/latestNewsSingleContainer/LatestNewsSingleContainer.css
@@ -102,7 +102,7 @@
 
 .contentFade {
   overflow: hidden;
-  max-height: 75px;
+  max-height: 85px;
 }
 
 .fadeoutDarkMode {
@@ -129,15 +129,45 @@
   padding: 0 5px;
 }
 
-@media only screen and (max-width: 1680px) {
+@media only screen and (max-width: 4000px) {
+  .latestNewsSingleContainer {
+    padding: 0 700px 0 700px;
+  }
+
+  .fadeout {
+    height: 5em;
+  }
+}
+
+@media only screen and (max-width: 2200px) {
+  .latestNewsSingleContainer {
+    padding: 0 500px 0 500px;
+  }
+
+  .fadeout {
+    height: 5em;
+  }
+}
+
+@media only screen and (max-width: 1900px) {
   .latestNewsSingleContainer {
     padding: 0 400px 0 400px;
+  }
+
+  .fadeout {
+    height: 4em;
+  }
+}
+
+@media only screen and (max-width: 1680px) {
+  .latestNewsSingleContainer {
+    padding: 0 300px 0 300px;
   }
 }
 
 @media only screen and (max-width: 1480px) {
   .latestNewsSingleContainer {
-    padding: 0 300px 0 300px;
+    padding: 0 250px 0 250px;
   }
 }
 
@@ -177,6 +207,11 @@
     min-width: 250px;
     max-width: 250px;
     margin: 0 20px 5px 0;
+  }
+  
+  .contentFade {
+    overflow: hidden;
+    max-height: 75px;
   }
 }
 
