--- a/src/components/latestNewsSingleContainer/LatestNewsSingleContainer.css
+++ b/src/components/latestNewsSingleContainer/LatestNewsSingleContainer.css
@@ -94,10 +94,7 @@
   bottom: 0em;
   width:100%;
   height: 2em;
-  background: -webkit-linear-gradient(
-      rgba(255, 255, 255, 0) 0%,
-      rgba(255, 255, 255, 1) 85%
-  );
+  background: -webkit-linear-gradient(hsla(0,0%,100%,0),#fff 85%);
 }
 
 .contentFade {
@@ -106,8 +103,8 @@
 }
 
 .fadeoutDarkMode {
-  background-image: -webkit-linear-gradient(top, rgba(23, 24, 28, 0) 0%, #17181c 100%);
-  background-color: initial;
+  background-image: -webkit-linear-gradient(top, rgba(23,24,28,0), #17181c);
+  background: -webkit-linear-gradient(hsla(0,0%,0,100%),#fff 99%);
 }
 
 .newsTimeStamp {
@@ -266,16 +263,25 @@
   }
 
   .fadeoutMobile {
-    position: sticky;
-    bottom: 0em;
-    width: 100%;
-    height: 14em;
+    height: 8em;
     background: -webkit-linear-gradient(
-        rgba(255, 255, 255, 0) 0%,
-        rgba(255, 255, 255, 1) 48%
+      rgba(255, 255, 255, 0) 0%,
+      rgba(255, 255, 255, 1) 99%
     );
   }
+
+  .fadeoutDarkMode {
+    background-image: -webkit-linear-gradient(top, rgba(23,24,28,0), #17181c);
+    background: -webkit-linear-gradient(hsla(0,0%,0,100%),#fff 99%);
+  }
 }
+
+@media only screen and (max-width: 800px) {
+  .fadeoutMobile {
+    height: 7em;
+  }
+}
+
 
 @media only screen and (max-width: 600px) {
   .latestNewsSingleContainer {
@@ -319,13 +325,11 @@
   }
 
   .fadeoutMobile {
-    position: sticky;
-    bottom: 0em;
-    width: 100%;
-    height: 18em;
-    background: -webkit-linear-gradient(
-        rgba(255, 255, 255, 0) 0%,
-        rgba(255, 255, 255, 1) 99%
-    );
+    height: 5em;
+  }
+
+  .fadeoutDarkMode {
+    background-image: -webkit-linear-gradient(top, rgba(23,24,28,0), #17181c);
+    background: -webkit-linear-gradient(hsla(0,0%,0,100%),#fff 99%);
   }
 }
