--- a/src/components/latestNewsSingleContainer/LatestNewsSingleContainer.css
+++ b/src/components/latestNewsSingleContainer/LatestNewsSingleContainer.css
@@ -2,6 +2,34 @@
   padding: 0 450px 0 450px;
 }
 
+.latestNewsContentContainer {
+  display: flex;
+  flex-direction: row;
+  height: 120px;
+  line-height: 25px;
+  overflow: hidden;
+  text-align: justify;
+  font-size: 14px;
+}
+
+.latestNewsDiscussionContainer {
+  display: flex;
+  font-size: 12px;
+  align-items: center;
+}
+
+.latestNewsDiscussionContainerLinkContainer {
+  display: flex;
+  flex: 1;
+  justify-content: flex-end;
+  text-decoration: none;
+  align-items: center;
+}
+
+.latestNewsDiscussionSource {
+  text-decoration: none;
+}
+
 .tags {
   display: flex;
   flex-direction: row;
@@ -32,42 +60,14 @@
   text-decoration: none;
 }
 
-.latestNewsContentContainer {
-  display: flex;
-  flex-direction: row;
-  height: 120px;
-  line-height: 25px;
-  overflow: hidden;
-  text-align: justify;
-  font-size: 14px;
-}
-
-.latestNewsDiscussionContainer {
-  display: flex;
-  font-size: 12px;
-  align-items: center;
-}
-
-.latestNewsDiscussionContainerLinkContainer {
-  display: flex;
-  flex: 1;
-  justify-content: flex-end;
-  text-decoration: none;
-  align-items: center;
-}
-
-.latestNewsDiscussionContainerLink {
-  text-decoration: none;
-}
-
-.latestNewsDiscussionSource {
-  text-decoration: none;
-}
-
 .newsImageContainer {
+  display: flex;
+  flex-direction: column;
   min-width: 250px;
   max-width: 250px;
+  max-height: -webkit-fill-available;
   margin: 0 20px 5px 0;
+  text-decoration: none;
 }
 
 .newsImage {
@@ -92,7 +92,7 @@
 .fadeout {
   position: sticky;
   bottom: 0em;
-  width:100%;
+  width: 100%;
   height: 2em;
   background: -webkit-linear-gradient(hsla(0,0%,100%,0),#fff 85%);
 }
@@ -126,210 +126,12 @@
   padding: 0 5px;
 }
 
-@media only screen and (max-width: 4000px) {
-  .latestNewsSingleContainer {
-    padding: 0 700px 0 700px;
-  }
-
-  .fadeout {
-    height: 5em;
-  }
-}
-
-@media only screen and (max-width: 2200px) {
-  .latestNewsSingleContainer {
-    padding: 0 500px 0 500px;
-  }
-
-  .fadeout {
-    height: 5em;
-  }
-}
-
-@media only screen and (max-width: 1900px) {
-  .latestNewsSingleContainer {
-    padding: 0 400px 0 400px;
-  }
-
-  .fadeout {
-    height: 4em;
-  }
-}
-
-@media only screen and (max-width: 1680px) {
-  .latestNewsSingleContainer {
-    padding: 0 300px 0 300px;
-  }
-}
-
-@media only screen and (max-width: 1480px) {
-  .latestNewsSingleContainer {
-    padding: 0 250px 0 250px;
-  }
-}
-
-@media only screen and (max-width: 1280px) {
-  .latestNewsSingleContainer {
-    padding: 0 200px 0 200px;
-  }
-  
-  .lastestNewsSingleContainerTitle {
-    padding: 0;
-  }
-
-  .commentIcons {
-    font-size: 14px;
-  }
-  
-  .commentContainer {
-    padding-left: 10px; 
-  }
-  
-  .newsTitle {
-    font-size: 12px;
-  }
-  
-  .latestNewsContentContainer {
-    height: 110px;
-    line-height: 25px;
-    font-size: 14px;
-  }
-  
-  .latestNewsDiscussionContainer {
-    font-size: 12px;
-    align-items: center;
-  }
-
-  .newsImageContainer {
-    min-width: 250px;
-    max-width: 250px;
-    margin: 0 20px 5px 0;
-  }
-  
-  .contentFade {
-    overflow: hidden;
-    max-height: 75px;
-  }
-}
-
-@media only screen and (max-width: 950px) {
-  .latestNewsSingleContainer {
-    padding: 0 150px 0 150px;
-  }
-
-  .tags {
-    padding-top: 5px;
-    padding-bottom: 5px;
-  }
-  
-  .commentIcons {
-    font-size: 14px;
-  }
-  
-  .commentContainer {
-    padding-left: 10px; 
-  }
-  
-  .newsTitle {
-    font-size: 6px;
-  }
-
-  .latestNewsContentContainer {
-    height: 80px;
-    line-height: 15px;
-    font-size: 12px;
-  }
-
-  .latestNewsDiscussionContainer {
-    font-size: 10px;
-  }
-
-  .newsImageContainer {
-    min-width: 250px;
-    max-width: 250px;
-    margin: 0 20px 5px 0;
-  }
-
-  .newsImageContainer {
-    min-width: 150px;
-    max-width: 150px;
-    margin: 0 20px 5px 0;
-  }
-
-  .newsTimeStamp {
-    display: flex;
-    flex-direction: column;
-    padding-top: 5px;
-  }
-
-  .fadeoutMobile {
-    height: 8em;
-    background: -webkit-linear-gradient(
-      rgba(255, 255, 255, 0) 0%,
-      rgba(255, 255, 255, 1) 99%
-    );
-  }
-
-  .fadeoutDarkMode {
-    background-image: -webkit-linear-gradient(top, rgba(23,24,28,0), #17181c);
-    background: -webkit-linear-gradient(hsla(0,0%,0,100%),#fff 99%);
-  }
-}
-
-@media only screen and (max-width: 800px) {
-  .fadeoutMobile {
-    height: 7em;
-  }
-}
-
-
-@media only screen and (max-width: 600px) {
-  .latestNewsSingleContainer {
-    padding: 0 10px 0 10px;
-  }
-
-  .tags {
-    padding-left: 1px;
-  }
-  
-  .commentIcons {
-    font-size: 14px;
-  }
-  
-  .commentContainer {
-    padding-left: 10px; 
-  }
-  
-  .newsTitle {
-    font-size: 6px;
-  }
-
-  .latestNewsNavLink {
-    padding: 5px 0;
-  }
-
-  .latestNewsContentContainer {
-    height: 75px;
-    line-height: 15px;
-    font-size: 10px;
-  }
-
-  .latestNewsDiscussionContainer {
-    font-size: 10px;
-  }
-
-  .newsImageContainer {
-    min-width: 150px;
-    max-width: 150px;
-    margin: 0 20px 5px 0;
-  }
-
-  .fadeoutMobile {
-    height: 5em;
-  }
-
-  .fadeoutDarkMode {
-    background-image: -webkit-linear-gradient(top, rgba(23,24,28,0), #17181c);
-    background: -webkit-linear-gradient(hsla(0,0%,0,100%),#fff 99%);
-  }
+.urlOverImage {
+  position: sticky;
+  background-color: rgba(0, 0, 0, 0.7);
+  height: 25px;
+  width: 250px;
+  font-size: 10px;
+  bottom: 4%;
+  word-wrap: break-word;
 }
