fixed some styles

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 html, body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, 'Merriweather', serif,
+  font-family: -apple-system,'Domine', serif,
     BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
