--- a/src/components/menuBoard/MenuBoard.css
+++ b/src/components/menuBoard/MenuBoard.css
@@ -12,6 +12,10 @@
   padding: 10px 0 10px 20px;
   font-size: 16px;
   cursor: pointer;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
 }
 
 .menuBoardnavElems:hover {
