--- a/src/components/articleDiscussion/ArticleDiscussion.css
+++ b/src/components/articleDiscussion/ArticleDiscussion.css
@@ -17,6 +17,11 @@
   margin: 0 100px 0 100px;
 }
 
+.centerLoader {
+  justify-content: center;
+  display: flex;
+}
+
 @media only screen and (max-width: 830px) {
   .editorWrapperContainer {
     width: 100%;
