Corrected header scroll that was looking buggy. Added the logos of each party to the tags of an article. Changed the blur from when the drawer is open to a black filter. May need improvement for light theme. Drawer was added some padding and a box shadow. Added another option to the renderLogo function to get the logo image with the correct size

--- a/src/components/mainContent/MainContent.css
+++ b/src/components/mainContent/MainContent.css
@@ -1,10 +1,10 @@
 .mainContainerDark {
   overflow: hidden;
-  filter: blur(2px); 
-  -webkit-filter: blur(2px);
-  -moz-filter: blur(2px);
-  -o-filter: blur(2px); 
-  -ms-filter: blur(2px);
+  filter: contrast(45%);
+  -webkit-filter: contrast(45%);
+  -moz-filter: contrast(45%);
+  -o-filter: contrast(45%); 
+  -ms-filter: contrast(45%);
 }
 
 .removeLinks {
