--- a/src/components/latestNewsSingleContainer/LatestNewsSingleContainer.css
+++ b/src/components/latestNewsSingleContainer/LatestNewsSingleContainer.css
@@ -34,6 +34,7 @@
   display: flex;
   flex-direction: row;
   cursor: pointer;
+  align-items: center;
 }
 
 .commentIcons {
@@ -62,13 +63,13 @@
 
 .newsImageContainer {
   display: flex;
-  flex-direction: column;
+  flex: 1;
   min-width: 250px;
   max-width: 250px;
-  max-height: -webkit-fill-available;
-  margin: 0 20px 5px 0;
+  margin-right: 20px;
   border-radius: 5px;
-  text-decoration-color: purple;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
 }
 
 .newsImage {
@@ -133,7 +134,7 @@
   height: 25px;
   width: 250px;
   font-size: 10px;
-  bottom: 82%;
+  right: 99%;
   word-wrap: break-word;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
